src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>How_would_Pride_fit_into_this_strategy__c</fullName>
        <label>How would Pride fit into this strategy?</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_your_agency_can_use_a_Pride_Campaign__c</fullName>
        <description>Does your agency have a clear understanding of the environmental threats impacting the site(s) in which it works and a vision for how outreach and a Pride campaign might help mitigate them?</description>
        <label>How your agency can use a Pride Campaign</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_no_what_org_Camp_Mgr_work__c</fullName>
        <inlineHelpText>Name of the organization that the campaign manager works for. (When &quot;NO&quot; selected for &quot;If Current Employee..&quot; )</inlineHelpText>
        <label>If no, where does Camp Mgr. work?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_explain__c</fullName>
        <label>If other, please explain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_please_specify__c</fullName>
        <label>If other, please specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_why_they_are_ideal__c</fullName>
        <label>If yes,describe why they are ideal</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_describe__c</fullName>
        <label>If yes, please describe</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_social_marketing_workshop__c</fullName>
        <label>Interested in social marketing workshop?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_individual_an_employee_of_your_org__c</fullName>
        <label>Is individual an employee of your org?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issues_of_Interest__c</fullName>
        <label>Issues of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Organization_Budget_USD__c</fullName>
        <label>Most Recent Organization Budget ($USD)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Proposed_Site__c</fullName>
        <label>Name of potential campaign site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_proposed_participant__c</fullName>
        <description>Name of the participant the applicant intends to send to a Campaigning for Conservation workshop.</description>
        <label>Name of proposed participant</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_prospective_Campaign_Manager__c</fullName>
        <label>Name of prospective Campaign Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Organizations_Supported__c</fullName>
        <label>Other Organizations Supported</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Application_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expression of Interest Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Application_Score__c</fullName>
        <description>1 is lowest, 5 is highest</description>
        <label>Pre-Application Score (1-5)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects Interest (if applicable)</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>R00N30000001B2hZEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rare_Affiliation__c</fullName>
        <inlineHelpText>What is this Pride Lead&apos;s Affiliation with Rare?</inlineHelpText>
        <label>Rare Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Implementing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Implementing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receive_Standard_Mailings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this person should receive standard mailings like Field Notes, Rare Report and Year End Mailings.</description>
        <label>Receive Standard Mailings?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <inlineHelpText>This Pride Lead is interested in running a Pride campaign in which region? This Lead is interested in receiving news about which regions?</inlineHelpText>
        <label>Regions of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regions_of_Interest__c</fullName>
        <label>Other Areas of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reports_to__c</fullName>
        <label>Reports to</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Agency Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Campaign Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>BINGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network/Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-lateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Select_top_three_threats_to_that_site__c</fullName>
        <label>Select top three threats to that site</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 Housing &amp; Urban Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Commercial &amp; Industrial Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3 Tourism &amp; Recreation Areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.1 Volcanoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.2 Earthquakes/Tsunamis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.3 Avalanches/Landslides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Geological Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.1 Habitat Shifting &amp; Alteration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.2 Droughts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.3 Temperature Extremes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.4 Storms &amp; Flooding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 Climate Change &amp; Severe Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Residential &amp; Commercial Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 Annual &amp; Perennial Non-Timber Crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Wood &amp; Pulp Plantations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 Livestock Farming &amp; Ranching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 Marine &amp; Freshwater Aquaculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Agriculture &amp; Aquaculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Oil &amp; Gas Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Mining &amp; Quarrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Renewable Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Energy Production &amp; Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Roads &amp; Railroads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Utility &amp; Service Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 Shipping Lanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.4 Flight Paths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Transportation &amp; Service Corridors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Hunting &amp; Collecting Terrestrial Ani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Gathering Terrestrial Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Logging &amp; Wood Harvesting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soc_Marketing_Training_w_o_P_Campaign__c</fullName>
        <label>Soc. Marketing Training w/o P. Campaign?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_detail__c</fullName>
        <label>Source detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species_of_Interest__c</fullName>
        <inlineHelpText>What species would this potential campaign focus on? What species is this Lead interested in receiving news about?</inlineHelpText>
        <label>Species of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>AZE species</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Mammals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tigers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turtles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ungulates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Supporters_Affiliates__c</fullName>
        <label>Supporters/Affiliates</label>
        <picklist>
            <picklistValues>
                <fullName>AWF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WWF</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TOEFL_Score__c</fullName>
        <label>TOEFL Score (for Kent applicants)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Themes__c</fullName>
        <inlineHelpText>What best describes the potential cohort theme this campaign could fit into? What themes interest this Lead?</inlineHelpText>
        <label>Potential Cohort Themes</label>
        <picklist>
            <picklistValues>
                <fullName>Birds – Shorebirds, Tropical Birds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change– REDD, Stoves, Adaptation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empty Forests – Hunting &amp; Bushmeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshwater Ecosystem Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Habitat Loss &amp; Degradation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceans-Over &amp; Destructive Fishing, Reefs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multilateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wealth_Engine_P2G_2_Rating__c</fullName>
        <description>Gradient within the P2G category. Higher rating indicates the contact better matches other WE databases and are better overall givers, i.e. 1-1 is determined to be more qualified than 1-5.</description>
        <inlineHelpText>Gradient within the P2G category. Higher rating indicates the contact better matches other WE databases and are better overall givers, i.e. 1-1 is determined to be more qualified than 1-5.</inlineHelpText>
        <label>Wealth Engine P2G - 2 Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wealth_Engine_P2G_Rating__c</fullName>
        <description>Fixed criteria predict that higher scores are more qualified and likely to give and upgrade. 1-0 is the most productive, 5-0 is the least.</description>
        <inlineHelpText>Fixed criteria predict that higher scores are more qualified and likely to give and upgrade. 1-0 is the most productive, 5-0 is the least.</inlineHelpText>
        <label>Wealth Engine P2G Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wealth_Engine_Range__c</fullName>
        <label>Wealth Engine Range</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Cohort__c</fullName>
        <description>As captured from EOI form</description>
        <label>Web Cohort</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_resources_can_your_agency_commit__c</fullName>
        <description>What resources might your agency be prepared to commit to the program?</description>
        <label>Can your org fulfill this requirement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>When_Referred__c</fullName>
        <label>When Referred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workshop_applied_to__c</fullName>
        <label>Workshop applied to</label>
        <picklist>
            <picklistValues>
                <fullName>China, July 2013</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pexmaps__County__c</fullName>
        <label>County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Geocode_Accuracy__c</fullName>
        <label>Geocode Accuracy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Geocode_Address__c</fullName>
        <label>Geocode Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pexmaps__Geocode_Status__c</fullName>
        <label>Geocode Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zReport_LeadStatus__c</fullName>
        <description>Field build by ExP for sole purpose of totalling the different types of leads to go into a report.</description>
        <formula>IF( IsConverted , &quot;Converted&quot;, IF( Pre_Application_Completed__c , &quot;EOI&quot;, IF( ISPICKVAL(Status,&quot;Unqualified&quot;), &quot;Unqualified&quot;,&quot;Lead&quot;)))</formula>
        <label>zReport-LeadStatus</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllBogorLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Name_of_Proposed_Site__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Applying_for_Program_at__c</columns>
        <columns>Date_Seeking_Admission__c</columns>
        <columns>Cohort__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PrideLead</value>
        </filters>
        <filters>
            <field>Applying_for_Program_at__c</field>
            <operation>contains</operation>
            <value>&quot;Bogor Agricultural University, Indonesia (Bahasa Indonesia)&quot;</value>
        </filters>
        <label>All Bogor Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllGuadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Name_of_Proposed_Site__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Applying_for_Program_at__c</columns>
        <columns>Date_Seeking_Admission__c</columns>
        <columns>Cohort__c</columns>
        <columns>Pre_Application_Completed__c</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PrideLead</value>
        </filters>
        <filters>
            <field>Applying_for_Program_at__c</field>
            <operation>contains</operation>
            <value>guad,University of Guadalajara (Spanish)</value>
        </filters>
        <label>All Guad Pride Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllPEPLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Name_of_Proposed_Site__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Applying_for_Program_at__c</columns>
        <columns>Date_Seeking_Admission__c</columns>
        <columns>Cohort__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PrideLead</value>
        </filters>
        <filters>
            <field>Applying_for_Program_at__c</field>
            <operation>contains</operation>
            <value>&quot;Georgetown University, USA (English)&quot;</value>
        </filters>
        <label>All PEP Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_China_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PrideLead</value>
        </filters>
        <filters>
            <field>Applying_for_Program_at__c</field>
            <operation>equals</operation>
            <value>&quot;Southwest Forestry University, China (Mandarin Chinese)&quot;</value>
        </filters>
        <label>All China Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Leads_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Pride_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Pre_Application_Completed__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PrideLead</value>
        </filters>
        <label>All Pride Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AnnasLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>anna</value>
        </filters>
        <label>Anna&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bogor_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Pre_Application_Completed__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.PrideLead</value>
        </filters>
        <filters>
            <field>Applying_for_Program_at__c</field>
            <operation>equals</operation>
            <value>&quot;Bogor Agricultural University, Indonesia (Bahasa Indonesia)&quot;</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>EOI Not Screened,Contacted,Open,Qualified</value>
        </filters>
        <label>Open Pride Leads Bogor</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BrettsLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>brett</value>
        </filters>
        <label>Brett&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_Future_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cohort__c</field>
            <operation>equals</operation>
            <value>China Future</value>
        </filters>
        <label>China Future Leads</label>
        <language>en_US</language>
    </listViews>
</CustomObject>